# arm-neon-test

./: CMakeLists.txt  README  bstmbw.c  main.cpp  memcpy.c  memcpy.o_glibc  neon.cpp  neontest.cpp  test.cpp
